# Repair_optimal

./: .gitignore  .gitmodules  README.md  b.txt  code_env_tips.md  get_result.sh  get_result_azure_lrc.sh  get_result_azure_lrc_1.sh  get_result_xorbas.sh  install_gcc_cmake.sh  install_tools.sh  main_mechine.sh  myout.txt  result_azure_lrc_copy.txt  result_azure_lrc_sub.txt  result_xorbas copy.txt  result_xorbas.txt  temp.txt
prototype/: CMakeLists.txt  client.cpp  compile.sh  install.sh  test_tools.cpp
prototype/config/: ClusterInformation.xml
prototype/include/: ToolBox.h  devcommon.h  metadefinition.h  proxy.h
prototype/include/LRCs/: General.h
prototype/pybind_cpp/: interface.cpp  interface.h  pybind.cpp
prototype/run_memcached/: cluster_run_memcached.sh  run_memcached.sh
prototype/src/: ToolBox.cpp  proxy.cpp
prototype/src/LRCs/: Azure_LRC.cpp  Azure_LRC_1.cpp  General.cpp  Optimal_LRC.cpp  Xorbas.cpp
prototype/src/libmemcached-1.0.18/: aminclude.am  config.status  libtool  mem_config.h
prototype/src/libmemcached-1.0.18/clients/: memcapable  memcat  memcp  memdump  memerror  memexist  memflush  memparse  memping  memrm  memslap  memstat  memtouch
prototype/src/libmemcached-1.0.18/clients/.deps/: clients_memcapable-memcapable.Po  clients_memslap-execute.Po  clients_memslap-generator.Po  clients_memslap-memslap.Po  execute.Po  generator.Po  memcat.Po  memcp.Po  memdump.Po  memerror.Po  memexist.Po  memflush.Po  memparse.Po  memping.Po  memrm.Po  memstat.Po  memtouch.Po  tests_failure-execute.Po  tests_failure-generator.Po  tests_libmemcached_1_0_sasl-execute.Po  tests_libmemcached_1_0_sasl-generator.Po  tests_libmemcached_1_0_testapp-execute.Po  tests_libmemcached_1_0_testapp-generator.Po  tests_libmemcached_1_0_testsocket-execute.Po  tests_libmemcached_1_0_testsocket-generator.Po  tests_testplus-execute.Po  tests_testplus-generator.Po  utilities.Plo
prototype/src/libmemcached-1.0.18/clients/.libs/: memcapable  memcat  memcp  memdump  memerror  memexist  memflush  memparse  memping  memrm  memslap  memstat  memtouch
prototype/src/libmemcached-1.0.18/libhashkit/.deps/: libhashkit_libhashkit_la-aes.Plo  libhashkit_libhashkit_la-algorithm.Plo  libhashkit_libhashkit_la-behavior.Plo  libhashkit_libhashkit_la-crc32.Plo  libhashkit_libhashkit_la-digest.Plo  libhashkit_libhashkit_la-encrypt.Plo  libhashkit_libhashkit_la-fnv_32.Plo  libhashkit_libhashkit_la-fnv_64.Plo  libhashkit_libhashkit_la-function.Plo  libhashkit_libhashkit_la-has.Plo  libhashkit_libhashkit_la-hashkit.Plo  libhashkit_libhashkit_la-jenkins.Plo  libhashkit_libhashkit_la-ketama.Plo  libhashkit_libhashkit_la-md5.Plo  libhashkit_libhashkit_la-murmur.Plo  libhashkit_libhashkit_la-murmur3.Plo  libhashkit_libhashkit_la-murmur3_api.Plo  libhashkit_libhashkit_la-nohsieh.Plo  libhashkit_libhashkit_la-one_at_a_time.Plo  libhashkit_libhashkit_la-rijndael.Plo  libhashkit_libhashkit_la-str_algorithm.Plo  libhashkit_libhashkit_la-strerror.Plo  libhashkit_libhashkit_la-string.Plo  libhashkit_libhashkitinc_la-aes.Plo  libhashkit_libhashkitinc_la-algorithm.Plo  libhashkit_libhashkitinc_la-behavior.Plo  libhashkit_libhashkitinc_la-crc32.Plo  libhashkit_libhashkitinc_la-digest.Plo  libhashkit_libhashkitinc_la-encrypt.Plo  libhashkit_libhashkitinc_la-fnv_32.Plo  libhashkit_libhashkitinc_la-fnv_64.Plo  libhashkit_libhashkitinc_la-function.Plo  libhashkit_libhashkitinc_la-has.Plo  libhashkit_libhashkitinc_la-hashkit.Plo  libhashkit_libhashkitinc_la-jenkins.Plo  libhashkit_libhashkitinc_la-ketama.Plo  libhashkit_libhashkitinc_la-md5.Plo  libhashkit_libhashkitinc_la-murmur.Plo  libhashkit_libhashkitinc_la-murmur3.Plo  libhashkit_libhashkitinc_la-murmur3_api.Plo  (+52 more)
prototype/src/libmemcached-1.0.18/libhashkit/.libs/: libhashkit.so.2.0.0
prototype/src/libmemcached-1.0.18/libmemcached-1.0/t/: c_sasl_test  c_test  cc_test
prototype/src/libmemcached-1.0.18/libmemcached/.deps/: backtrace.Po  clients_memcapable-byteorder.Po  libmemcached_libmemcached_la-allocators.Plo  libmemcached_libmemcached_la-analyze.Plo  libmemcached_libmemcached_la-array.Plo  libmemcached_libmemcached_la-auto.Plo  libmemcached_libmemcached_la-backtrace.Plo  libmemcached_libmemcached_la-behavior.Plo  libmemcached_libmemcached_la-byteorder.Plo  libmemcached_libmemcached_la-callback.Plo  libmemcached_libmemcached_la-connect.Plo  libmemcached_libmemcached_la-delete.Plo  libmemcached_libmemcached_la-do.Plo  libmemcached_libmemcached_la-dump.Plo  libmemcached_libmemcached_la-encoding_key.Plo  libmemcached_libmemcached_la-error.Plo  libmemcached_libmemcached_la-exist.Plo  libmemcached_libmemcached_la-fetch.Plo  libmemcached_libmemcached_la-flag.Plo  libmemcached_libmemcached_la-flush.Plo  libmemcached_libmemcached_la-flush_buffers.Plo  libmemcached_libmemcached_la-get.Plo  libmemcached_libmemcached_la-hash.Plo  libmemcached_libmemcached_la-hosts.Plo  libmemcached_libmemcached_la-initialize_query.Plo  libmemcached_libmemcached_la-instance.Plo  libmemcached_libmemcached_la-io.Plo  libmemcached_libmemcached_la-key.Plo  libmemcached_libmemcached_la-memcached.Plo  libmemcached_libmemcached_la-namespace.Plo  libmemcached_libmemcached_la-options.Plo  libmemcached_libmemcached_la-parse.Plo  libmemcached_libmemcached_la-poll.Plo  libmemcached_libmemcached_la-purge.Plo  libmemcached_libmemcached_la-quit.Plo  libmemcached_libmemcached_la-response.Plo  libmemcached_libmemcached_la-result.Plo  libmemcached_libmemcached_la-sasl.Plo  libmemcached_libmemcached_la-server.Plo  (+59 more)
prototype/src/libmemcached-1.0.18/libtest/: abort  backtrace  core-count  skiptest  unittest  wait
prototype/src/libmemcached-1.0.18/support/: libmemcached.pc
prototype/src/libmemcached-1.0.18/tests/: atomsmasher  cycle  failure  hash_plus  memcapable  memcat  memcp  memdump  memerror  memexist  memflush  memping  memrm  memslap  memstat  memtouch  parser  testhashkit  testplus  testudp
sim/: main.py
(+713 files in other folders)
